# fortran-duckdb

./: CMakeLists.txt  README.md  makefile  tags
libduckdb-linux-amd64/: makefile
src/: duckdb.f90  duckdb_mo.f90  makefile
test/: 01_unit_test_open_close.f90  CMakeLists.txt  CMakeLists_ifx.txt  makefile  unit_test.f90
